--- a/.github/workflows/apply-terraform.yml
+++ b/.github/workflows/apply-terraform.yml
@@ -5,11 +5,11 @@ on:
     branches: [main]
     paths:
       - 'terraform/**'
-      - '.github/workflows/terraform.yml'
+      - '.github/workflows/apply-terraform.yml'
   pull_request:
     paths:
       - 'terraform/**'
-      - '.github/workflows/terraform.yml'
+      - '.github/workflows/apply-terraform.yml'
   workflow_dispatch:
     inputs:
       apply:
@@ -183,17 +183,10 @@ jobs:
         working-directory: terraform
         run: terraform init
 
-      - name: Download Plan
-        if: needs.plan.outputs.has_changes == 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: tfplan
-          path: terraform/
-
       - name: Terraform Apply
         if: needs.plan.outputs.has_changes == 'true'
         working-directory: terraform
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve
         env:
           TF_VAR_github_app_key_base64: ${{ secrets.GH_APP_KEY_BASE64 }}
           TF_VAR_github_app_id: ${{ secrets.GH_APP_ID }}
