--- a/terraform/templates/runner-configs/cpu-x64-spot.yaml
+++ b/terraform/templates/runner-configs/cpu-x64-spot.yaml
@@ -90,6 +90,9 @@ runner_config:
   instance_allocation_strategy: capacity-optimized
   enable_on_demand_failover_for_errors:
     - InsufficientInstanceCapacity
+    - SpotMaxPriceTooLow
+    - MaxSpotInstanceCountExceeded
+    - UnfulfillableCapacity
 
   # Create service-linked role (only needed ONCE per AWS account)
   create_service_linked_role_spot: true
